@@ -61,7 +61,7 @@ from pypet.storageservice import HDF5StorageService, QueueStorageServiceSender, 
 import pypet.pypetconstants as pypetconstants
 from pypet.gitintegration import make_git_commit
 from pypet._version import __version__ as VERSION
-from pypet.utils.decorators import deprecated
+from pypet.utils.decorators import deprecated, kwargs_api_change
 from pypet.pypetlogging import HasLogger, StreamToLogger
 from pypet.utils.helpful_functions import is_debug
 
@@ -267,7 +267,7 @@ class Environment(HasLogger):
 
     :param comment: Comment added to the trajectory if a novel trajectory is created.
 
-    :param dynamically_imported_classes:
+    :param dynamic_imports:
 
           Only considered if a new trajectory is created.
           If you've written custom parameters or results that need to be loaded
@@ -276,12 +276,12 @@ class Environment(HasLogger):
           naming classes and there module paths.
 
           For example:
-          `dynamically_imported_classes =
+          `dynamic_imports =
           ['pypet.parameter.PickleParameter',MyCustomParameter]`
 
           If you only have a single class to import, you do not need
           the list brackets:
-          `dynamically_imported_classes = 'pypet.parameter.PickleParameter'`
+          `dynamic_imports = 'pypet.parameter.PickleParameter'`
 
     :param automatic_storing:
 
@@ -716,10 +716,11 @@ class Environment(HasLogger):
 
     """
 
+    @kwargs_api_change('dynamically_imported_classes', 'dynamic_imports')
     def __init__(self, trajectory='trajectory',
                  add_time=True,
                  comment='',
-                 dynamically_imported_classes=None,
+                 dynamic_imports=None,
                  automatic_storing=True,
                  log_folder=None,
                  log_level=logging.INFO,
@@ -830,7 +831,7 @@ class Environment(HasLogger):
             # Create a new trajectory
             self._traj = Trajectory(trajectory,
                                     add_time=add_time,
-                                    dynamically_imported_classes=dynamically_imported_classes,
+                                    dynamic_imports=dynamic_imports,
                                     comment=comment)
 
             self._timestamp = self.v_trajectory.v_timestamp  # Timestamp of creation
