@@ -20,6 +20,7 @@ import pickle
 import logging
 import scipy.sparse as spsp
 import pypet.pypetexceptions as pex
+import warnings
 import multiprocessing as multip
 import pypet.utils.comparisons as comp
 from pypet import pypetconstants, BaseResult
@@ -86,6 +87,8 @@ class TrajectoryTest(unittest.TestCase):
 
         with self.assertRaises(ValueError):
             self.traj.f_add_parameter('Peter.  h ._hurz')
+
+
 
     def test_truncation_of_string_statements_of_group_nodes(self):
 
